--- a/Client-for-Traccar/Settings.xaml
+++ b/Client-for-Traccar/Settings.xaml
@@ -62,10 +62,10 @@
 
                 <Button.Style>
                     <Style TargetType="Button" BasedOn="{StaticResource CloseButton}">
-                        <Setter Property="Background" Value="#009900"/>
+                        <Setter Property="Background" Value="{DynamicResource SecondaryGreen}"/>
                         <Style.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Background" Value="#00aa00"/>
+                                <Setter Property="Background" Value="{DynamicResource PrimaryGreen}"/>
                             </Trigger>
                         </Style.Triggers>
                     </Style>
@@ -91,10 +91,10 @@
 
                 <Button.Style>
                     <Style TargetType="{x:Type Button}" BasedOn="{StaticResource CloseButton}">
-                        <Setter Property="Background" Value="#009900"/>
+                        <Setter Property="Background" Value="{DynamicResource SecondaryGreen}"/>
                         <Style.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Background" Value="#00aa00"/>
+                                <Setter Property="Background" Value="{DynamicResource PrimaryGreen}"/>
                             </Trigger>
                         </Style.Triggers>
                     </Style>
