Adding animation transition to textBox when these are activated

--- a/Client-for-Traccar/Styles/MainStyle.xaml
+++ b/Client-for-Traccar/Styles/MainStyle.xaml
@@ -1,16 +1,17 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <!-- primary colors -->
-    <SolidColorBrush x:Key="PrimaryBlue" Color="#FF2CB9F5"></SolidColorBrush>
-    <SolidColorBrush x:Key="PrimaryWhite" Color="#dddddd"></SolidColorBrush>
-    <SolidColorBrush x:Key="PrimaryGreen" Color="#00dd44"></SolidColorBrush>
 
-    <!-- secondary colors -->
-    <SolidColorBrush x:Key="SecondaryBlue" Color="#bb0875b1"></SolidColorBrush>
-    <SolidColorBrush x:Key="SecondaryWhite" Color="#aaaaaa"></SolidColorBrush>
-    <SolidColorBrush x:Key="SecondaryGreen" Color="#008822"></SolidColorBrush>
-    <SolidColorBrush x:Key="DarkGray" Color="#333333"></SolidColorBrush>
+        <!-- primary colors -->
+        <SolidColorBrush x:Key="PrimaryBlue" Color="#FF2CB9F5"></SolidColorBrush>
+        <SolidColorBrush x:Key="PrimaryWhite" Color="#dddddd"></SolidColorBrush>
+        <SolidColorBrush x:Key="PrimaryGreen" Color="#00dd44"></SolidColorBrush>
+
+        <!-- secondary colors -->
+        <SolidColorBrush x:Key="SecondaryBlue" Color="#bb0875b1"></SolidColorBrush>
+        <SolidColorBrush x:Key="SecondaryWhite" Color="#aaaaaa"></SolidColorBrush>
+        <SolidColorBrush x:Key="SecondaryGreen" Color="#008822"></SolidColorBrush>
+        <SolidColorBrush x:Key="DarkGray" Color="#333333"></SolidColorBrush>
 
     <!-- general purpose button-->
     <Style TargetType="{x:Type Button}" x:Key="GeneralPurposeButton">
@@ -126,5 +127,21 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+        <Style.Triggers>
+            <EventTrigger RoutedEvent="GotFocus">
+                <BeginStoryboard>
+                    <Storyboard>
+                        <ColorAnimation Storyboard.TargetProperty="Background.Color" To="#dddddd" Duration="0:0:0.3"/>
+                    </Storyboard>
+                </BeginStoryboard>
+            </EventTrigger>
+            <EventTrigger RoutedEvent="LostFocus">
+                <BeginStoryboard>
+                    <Storyboard>
+                        <ColorAnimation Storyboard.TargetProperty="Background.Color" To="#aaaaaa" Duration="0:0:0.3"/>
+                    </Storyboard>
+                </BeginStoryboard>
+            </EventTrigger>
+        </Style.Triggers>
     </Style>
 </ResourceDictionary>
