--- a/Client-for-Traccar/Styles/MainStyle.xaml
+++ b/Client-for-Traccar/Styles/MainStyle.xaml
@@ -110,7 +110,7 @@
                                 VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
                                 IsHitTestVisible="False"
                                 Opacity="0.5"
-                                Text="  http://youripaddres.com:portNumber"
+                                Text=""
                                 Visibility="Hidden" />
                         </Grid>
                     </Border>
