--- a/Client-for-Traccar/MainWindow.xaml
+++ b/Client-for-Traccar/MainWindow.xaml
@@ -1,9 +1,8 @@
 ﻿<Window x:Class="Client_for_Traccar.MainWindow"
-	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-	xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-	xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-	xmlns:local="clr-namespace:Client_for_Traccar"
+        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
         Title="Traccar Client" Height="400" Width="600"
         AllowsTransparency="True"
@@ -19,11 +18,11 @@
                 <RowDefinition Height="75"></RowDefinition>
             </Grid.RowDefinitions>
 
-            <Border BorderBrush="Black" BorderThickness="0" Background="{StaticResource DarkGray}" Grid.ColumnSpan="3" Margin="0,-1,0,14" CornerRadius="20"/>
+            <Border BorderBrush="Black" BorderThickness="0" Background="{StaticResource DarkGray}" Grid.ColumnSpan="3" Margin="0,-1,0,14" CornerRadius="20" />
 
             <TextBlock x:Name="infoVersion" Margin="162,376,0,-313" HorizontalAlignment="Left"
                        Foreground="#FF717171"
-                       FontFamily="Cascadia Code" TextAlignment="Center" Width="264" 
+                       FontFamily="Cascadia Code" TextAlignment="Center" Width="264"
                        FontSize="10" Grid.ColumnSpan="3">
                 v. 0.0.0
             </TextBlock>
@@ -37,84 +36,84 @@
                     Grid.ColumnSpan="2">
             </TextBlock>
 
-            <Label x:Name="threadSuspended" 
-                   Content="GPS paused!" 
-                   Margin="10,66,10,-33" 
-                   Foreground="#ee0000" 
-                   FontFamily="Cascadia Code" 
+            <Label x:Name="threadSuspended"
+                   Content="GPS paused!"
+                   Margin="10,66,10,-33"
+                   Foreground="#ee0000"
+                   FontFamily="Cascadia Code"
                    VerticalContentAlignment="Center"
                    HorizontalContentAlignment="Center"
                    FontSize="16"
                    Visibility="Hidden"
-                   Grid.Column="1"/>
+                   Grid.Column="1" />
 
-            <Label x:Name="threadIsRunning" 
-                   Content="Service is running" 
-                   Margin="10,66,10,-33" 
-                   Foreground="#00bb00" 
-                   FontFamily="Cascadia Code" 
+            <Label x:Name="threadIsRunning"
+                   Content="Service is running"
+                   Margin="10,66,10,-33"
+                   Foreground="#00bb00"
+                   FontFamily="Cascadia Code"
                    VerticalContentAlignment="Center"
                    HorizontalContentAlignment="Center"
                    FontSize="16"
                    Visibility="Hidden"
-                   Grid.Column="1"/>
+                   Grid.Column="1" />
 
-            <Button x:Name="manualLocalize"
+            <!--<Button x:Name="manualLocalize"
                     Margin="65,126,65,-124" Cursor="Hand"
-                    Click="revealPosition" 
-                    Grid.Column="1" 
+                    Click="revealPosition"
+                    Grid.Column="1"
                     ToolTip="Update position manually">
                 <Button.Style>
                     <Style TargetType="Button" BasedOn="{StaticResource CloseButton}">
-                        <Setter Property="Background" Value="{DynamicResource SecondaryBlue}"/>
+                        <Setter Property="Background" Value="{DynamicResource SecondaryBlue}" />
                         <Style.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Background" Value="{DynamicResource PrimaryBlue}"/>
+                                <Setter Property="Background" Value="{DynamicResource PrimaryBlue}" />
                             </Trigger>
                         </Style.Triggers>
                     </Style>
                 </Button.Style>
                 <Image Source="/assets/location-sign.png" Height="40" Width="40" />
-            </Button>
+            </Button>-->
 
-            <Label x:Name="labelLat" Content="LATITUDE:" Margin="123,253,0,-204" Foreground="#FFF7F7F7" FontFamily="Cascadia Code"/>
+            <Label x:Name="labelLat" Content="LATITUDE:" Margin="123,253,0,-204" Foreground="#FFF7F7F7" FontFamily="Cascadia Code" />
             <TextBlock x:Name="textForLatitude"
-                       Text="N/D" 
-                       Foreground="#FFF56C2C" 
-                       FontSize="17" 
-                       Grid.ColumnSpan="2" 
-                       Margin="38,284,133,-237" 
-                       TextAlignment="Center">
-                <TextBlock.Effect>
-                    <DropShadowEffect/>
-                </TextBlock.Effect>
-            </TextBlock>
-
-            <Label x:Name="labelLong" Content="LONGITUDE:" Margin="0,253,123,-204" Foreground="#FFF7F7F7" FontFamily="Cascadia Code" Grid.Column="2"/>
-            <TextBlock x:Name="textForLongitude" 
                        Text="N/D"
                        Foreground="#FFF56C2C"
-                       FontSize="17" 
-                       Grid.ColumnSpan="2" 
-                       Margin="124,284,47,-237" 
-                       TextAlignment="Center" 
-                       Grid.Column="1">
+                       FontSize="17"
+                       Grid.ColumnSpan="2"
+                       Margin="38,284,133,-237"
+                       TextAlignment="Center">
                 <TextBlock.Effect>
-                    <DropShadowEffect/>
+                    <DropShadowEffect />
                 </TextBlock.Effect>
             </TextBlock>
 
-            <Label x:Name="labelUpdate" Content="LATEST UPDATE:" Margin="46,253,46,-204" Foreground="#FFF7F7F7" FontFamily="Cascadia Code" Grid.Column="1"/>
-            <TextBlock x:Name="dateUpdate" 
-                       Text="N/D" 
-                       Foreground="#FFF56C2C" 
-                       FontSize="17" 
-                       Margin="41,284,41,-269" 
-                       TextAlignment="Center" 
-                       Grid.Column="1" 
+            <Label x:Name="labelLong" Content="LONGITUDE:" Margin="0,253,123,-204" Foreground="#FFF7F7F7" FontFamily="Cascadia Code" Grid.Column="2" />
+            <TextBlock x:Name="textForLongitude"
+                       Text="N/D"
+                       Foreground="#FFF56C2C"
+                       FontSize="17"
+                       Grid.ColumnSpan="2"
+                       Margin="124,284,47,-237"
+                       TextAlignment="Center"
+                       Grid.Column="1">
+                <TextBlock.Effect>
+                    <DropShadowEffect />
+                </TextBlock.Effect>
+            </TextBlock>
+
+            <Label x:Name="labelUpdate" Content="LATEST UPDATE:" Margin="46,253,46,-204" Foreground="#FFF7F7F7" FontFamily="Cascadia Code" Grid.Column="1" />
+            <TextBlock x:Name="dateUpdate"
+                       Text="N/D"
+                       Foreground="#FFF56C2C"
+                       FontSize="17"
+                       Margin="41,284,41,-269"
+                       TextAlignment="Center"
+                       Grid.Column="1"
                        TextWrapping="Wrap">
                 <TextBlock.Effect>
-                    <DropShadowEffect/>
+                    <DropShadowEffect />
                 </TextBlock.Effect>
             </TextBlock>
 
@@ -122,36 +121,36 @@
             <Button x:Name="CloseButtonSettings"
                     Click="closeWindowPersonalized"
                     Style="{StaticResource CloseButton}"
-                    Margin="150,10,10,25" 
-                    Width="40" 
-                    Height="40" 
-                    Cursor="Hand" 
-                    ToolTip="Close" 
+                    Margin="150,10,10,25"
+                    Width="40"
+                    Height="40"
+                    Cursor="Hand"
+                    ToolTip="Close"
                     Grid.Column="2">
                 <Image Source="/Styles/close.png"
-                       Width="20" 
+                       Width="20"
                        Height="20"
-                       VerticalAlignment="Center"/>
+                       VerticalAlignment="Center" />
             </Button>
 
             <!-- KILL BUTTON -->
             <!--<Button x:Name="killButton"
                     Click="killSender"
-                    Margin="105,10,55,25" 
-                    Width="40" 
-                    Height="40" 
-                    ToolTip="Kill active background process" 
-                    Cursor="Hand" 
-                    Grid.Column="2" >
-                <Image Source="/assets/skullWhite.png" 
-                       Width="25" 
-                       Height="25"/>
+                    Margin="105,10,55,25"
+                    Width="40"
+                    Height="40"
+                    ToolTip="Kill active background process"
+                    Cursor="Hand"
+                    Grid.Column="2">
+                <Image Source="/assets/skullWhite.png"
+                       Width="25"
+                       Height="25" />
                 <Button.Style>
                     <Style TargetType="Button" BasedOn="{StaticResource CloseButton}">
-                        <Setter Property="Background" Value="Black"/>
+                        <Setter Property="Background" Value="Black" />
                         <Style.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Background" Value="#dddd00"/>
+                                <Setter Property="Background" Value="#dddd00" />
                             </Trigger>
                         </Style.Triggers>
                     </Style>
@@ -161,21 +160,21 @@
             <!-- CREATE NEW TASK BUTTON -->
             <Button x:Name="playPauseButton"
                     Click="newBackgroundTask"
-                    Margin="100,11,60,24" 
-                    Width="40" 
-                    Height="40" 
-                    ToolTip="Play/pause the sender" 
-                    Cursor="Hand" 
-                    Grid.Column="2" >
-                <Image Source="/assets/pause.png" 
-                       Width="25" 
-                       Height="25"/>
+                    Margin="100,11,60,24"
+                    Width="40"
+                    Height="40"
+                    ToolTip="Play/pause the sender"
+                    Cursor="Hand"
+                    Grid.Column="2">
+                <Image Source="/assets/pause.png"
+                       Width="25"
+                       Height="25" />
                 <Button.Style>
                     <Style TargetType="Button" BasedOn="{StaticResource CloseButton}">
-                        <Setter Property="Background" Value="{DynamicResource SecondaryBlue}"/>
+                        <Setter Property="Background" Value="{DynamicResource SecondaryBlue}" />
                         <Style.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
-                                <Setter Property="Background" Value="{DynamicResource PrimaryBlue}"/>
+                                <Setter Property="Background" Value="{DynamicResource PrimaryBlue}" />
                             </Trigger>
                         </Style.Triggers>
                     </Style>
@@ -183,20 +182,20 @@
             </Button>
 
             <!-- SETTINGS BUTTON -->
-            <Button x:Name="settingsButton" 
-                    Margin="10,363,165,-313" 
-                    Click="Button_Click" 
-                    Height="25" 
-                    Width="25" >
-                <Image Source="assets/settings.png"/>
+            <Button x:Name="settingsButton"
+                    Margin="10,363,165,-313"
+                    Click="Button_Click"
+                    Height="25"
+                    Width="25">
+                <Image Source="assets/settings.png" />
                 <Button.Style>
                     <Style TargetType="Button" BasedOn="{StaticResource PictureButton}">
-                        <Setter Property="Background" Value="Transparent"/>
+                        <Setter Property="Background" Value="Transparent" />
                         <Style.Triggers>
                             <Trigger Property="IsMouseOver" Value="True">
                                 <Setter Property="Effect">
                                     <Setter.Value>
-                                        <DropShadowEffect ShadowDepth="8" Color="#222222" Opacity="1"/>
+                                        <DropShadowEffect ShadowDepth="8" Color="#222222" Opacity="1" />
                                     </Setter.Value>
                                 </Setter>
                             </Trigger>
