Changin visual style for map Adding auto zoom

--- a/Client-for-Traccar/App.xaml
+++ b/Client-for-Traccar/App.xaml
@@ -9,6 +9,7 @@
                 <ResourceDictionary Source="/Styles/MainStyle.xaml"/>
                 <ResourceDictionary Source="/Styles/MenuStyle.xaml"/>
                 <ResourceDictionary Source="/Styles/generalMenuStyle.xaml"/>
+                <ResourceDictionary Source="/Styles/pushpinStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
