--- a/Client-for-Traccar/MainWindow.xaml
+++ b/Client-for-Traccar/MainWindow.xaml
@@ -5,11 +5,11 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:m="clr-namespace:Microsoft.Maps.MapControl.WPF;assembly=Microsoft.Maps.MapControl.WPF"        
         mc:Ignorable="d"
-        Title="Traccar Client" Height="400" Width="600"
+        Title="Traccar Client" Height="512" Width="600"
         AllowsTransparency="True"
         WindowStyle="None" ResizeMode="NoResize" Background="{x:Null}" MouseDown="Window_MouseDown">
-    <Border CornerRadius="20" Background="#ff292929" BorderThickness="1" BorderBrush="#ff191919">
-        <Grid>
+    <Border CornerRadius="20" Background="#ff292929" BorderThickness="1" BorderBrush="#ff191919" Height="512" VerticalAlignment="Top">
+        <Grid Margin="0,11,0,0" Height="498" VerticalAlignment="Top">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="200"></ColumnDefinition>
                 <ColumnDefinition Width="200"></ColumnDefinition>
@@ -19,9 +19,7 @@
                 <RowDefinition Height="75"></RowDefinition>
             </Grid.RowDefinitions>
 
-            <Border BorderBrush="Black" BorderThickness="0" Background="{StaticResource DarkGray}" Grid.ColumnSpan="3" Margin="0,-1,0,14" CornerRadius="20" />
-
-            <TextBlock x:Name="infoVersion" Margin="162,376,0,-313" HorizontalAlignment="Left"
+            <TextBlock x:Name="infoVersion" Margin="166,447,0,-384" HorizontalAlignment="Left"
                        Foreground="#FF717171"
                        FontFamily="Cascadia Code" TextAlignment="Center" Width="264"
                        FontSize="10" Grid.ColumnSpan="3">
@@ -31,8 +29,10 @@
             <Grid Grid.Column="1" Grid.ColumnSpan="2" Margin="120,87,80,-87">
                 <Grid Margin="-234,-7,234,7">
                     <m:Map x:Name="myMap" CredentialsProvider="qtF1tbNC6DSy4noXuV0W~0F6LMMtcj578O71nXGOXAQ~Arm0KZUgxG3dOdteoNW4Eo5L7JZyNaA-P82FcEV3Vc7wMJ-zXDk04HgZaFzAOHQB" 
-                            Mode="Road"
-                           Margin="-88,-19,-315,-123">
+                            Mode="Aerial"
+                           Margin="-89,-10,-314,-194"
+                           ScaleVisibility="Hidden"
+                           >
                     </m:Map>
                 </Grid>
             </Grid>
@@ -44,6 +44,7 @@
                     FontSize="21"
                     Foreground="#dddddd" Margin="66,17,41,26"
                     Grid.ColumnSpan="2">
+
             </TextBlock>
 
             <Label x:Name="threadSuspended"
@@ -86,26 +87,26 @@
                 <Image Source="/assets/location-sign.png" Height="40" Width="40" />
             </Button>-->
 
-            <Label x:Name="labelLat" Content="LATITUDE:" Margin="110,286,13,-237" Foreground="#FFF7F7F7" FontFamily="Cascadia Code" />
+            <Label x:Name="labelLat" Content="LATITUDE:" Margin="110,372,13,-323" Foreground="#FFF7F7F7" FontFamily="Cascadia Code" />
             <TextBlock x:Name="textForLatitude"
                        Text="N/D"
                        Foreground="#FFF56C2C"
                        FontSize="17"
                        Grid.ColumnSpan="2"
-                       Margin="34,317,137,-270"
+                       Margin="34,403,137,-356"
                        TextAlignment="Center">
                 <TextBlock.Effect>
                     <DropShadowEffect />
                 </TextBlock.Effect>
             </TextBlock>
 
-            <Label x:Name="labelLong" Content="LONGITUDE:" Margin="196,286,127,-237" Foreground="#FFF7F7F7" FontFamily="Cascadia Code" Grid.Column="1" Grid.ColumnSpan="2" />
+            <Label x:Name="labelLong" Content="LONGITUDE:" Margin="196,372,127,-323" Foreground="#FFF7F7F7" FontFamily="Cascadia Code" Grid.Column="1" Grid.ColumnSpan="2" />
             <TextBlock x:Name="textForLongitude"
                        Text="N/D"
                        Foreground="#FFF56C2C"
                        FontSize="17"
                        Grid.ColumnSpan="2"
-                       Margin="120,317,51,-270"
+                       Margin="120,403,51,-356"
                        TextAlignment="Center"
                        Grid.Column="1">
                 <TextBlock.Effect>
@@ -113,12 +114,12 @@
                 </TextBlock.Effect>
             </TextBlock>
 
-            <Label x:Name="labelUpdate" Content="LATEST UPDATE:" Margin="42,286,50,-237" Foreground="#FFF7F7F7" FontFamily="Cascadia Code" Grid.Column="1" />
+            <Label x:Name="labelUpdate" Content="LATEST UPDATE:" Margin="42,372,50,-323" Foreground="#FFF7F7F7" FontFamily="Cascadia Code" Grid.Column="1" />
             <TextBlock x:Name="dateUpdate"
                        Text="N/D"
                        Foreground="#FFF56C2C"
                        FontSize="17"
-                       Margin="37,317,45,-302"
+                       Margin="37,403,45,-388"
                        TextAlignment="Center"
                        Grid.Column="1"
                        TextWrapping="Wrap">
@@ -197,7 +198,6 @@
                     Click="Button_Click"
                     Height="25"
                     Width="25">
-                <Image Source="assets/settings.png" />
                 <Button.Style>
                     <Style TargetType="Button" BasedOn="{StaticResource PictureButton}">
                         <Setter Property="Background" Value="Transparent" />
@@ -213,6 +213,7 @@
                     </Style>
                 </Button.Style>
             </Button>
+            <Image Source="assets/settings.png" Margin="11,447,165,-396" />
         </Grid>
     </Border>
 </Window>
