--- a/Client-for-Traccar/Styles/MainStyle.xaml
+++ b/Client-for-Traccar/Styles/MainStyle.xaml
@@ -2,25 +2,24 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
 
-        <!-- primary colors -->
-        <SolidColorBrush x:Key="PrimaryBlue" Color="#FF2CB9F5"></SolidColorBrush>
-        <SolidColorBrush x:Key="PrimaryWhite" Color="#dddddd"></SolidColorBrush>
-        <SolidColorBrush x:Key="PrimaryGreen" Color="#00dd44"></SolidColorBrush>
+    <!-- primary colors -->
+    <SolidColorBrush x:Key="PrimaryBlue" Color="#FF2CB9F5"></SolidColorBrush>
+    <SolidColorBrush x:Key="PrimaryWhite" Color="#dddddd"></SolidColorBrush>
+    <SolidColorBrush x:Key="PrimaryGreen" Color="#00dd44"></SolidColorBrush>
 
-        <!-- secondary colors -->
-        <SolidColorBrush x:Key="SecondaryBlue" Color="#bb0875b1"></SolidColorBrush>
-        <SolidColorBrush x:Key="SecondaryWhite" Color="#aaaaaa"></SolidColorBrush>
-        <SolidColorBrush x:Key="SecondaryGreen" Color="#008822"></SolidColorBrush>
-        <SolidColorBrush x:Key="DarkGray" Color="#333333"></SolidColorBrush>
+    <!-- secondary colors -->
+    <SolidColorBrush x:Key="SecondaryBlue" Color="#bb0875b1"></SolidColorBrush>
+    <SolidColorBrush x:Key="SecondaryWhite" Color="#aaaaaa"></SolidColorBrush>
+    <SolidColorBrush x:Key="SecondaryGreen" Color="#008822"></SolidColorBrush>
+    <SolidColorBrush x:Key="DarkGray" Color="#333333"></SolidColorBrush>
 
     <!-- general purpose button-->
     <Style TargetType="{x:Type Button}" x:Key="GeneralPurposeButton">
-        <Setter Property="Background" Value="{DynamicResource PrimaryBlue}"/>
         <Setter Property="FontSize" Value="20"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
-                    <Border Background="{TemplateBinding Background}" BorderBrush="{DynamicResource DarkGray}" BorderThickness="2" CornerRadius="5">
+                    <Border Background="{TemplateBinding Background}"  BorderThickness="2" CornerRadius="15">
                         <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                     </Border>
                 </ControlTemplate>
