--- a/Client-for-Traccar/messageBox.xaml
+++ b/Client-for-Traccar/messageBox.xaml
@@ -8,13 +8,38 @@
         WindowStyle="None"        
         AllowsTransparency="True"
         Title="Window1" 
-        Height="322" 
-        Width="800" 
+        Height="317" 
+        Width="677" 
         Background="Transparent">
-    <Border CornerRadius="20" Background="#ff292929">
+    <Border CornerRadius="20" Background="#ff292929" Margin="140,115,0,0">
         <Border.Effect>
             <DropShadowEffect BlurRadius="10" ShadowDepth="10"/>
         </Border.Effect>
 
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+
+            <Button
+                Style="{StaticResource GeneralPurposeButton}"
+                Background="{DynamicResource SecondaryGreen}"
+                Foreground="White"
+                Content="OK" Margin="76,37,75,10"
+                Grid.Column="1" Grid.Row="1"
+                Click="MyWindow_Closed"/>
+
+            <Button
+                Style="{StaticResource GeneralPurposeButton}"
+                Background="DarkRed"
+                Foreground="White"
+                Content="Cancel" Margin="76,37,76,10" Grid.Row="1"
+                Click="MyWindow_Closed"/>
+        </Grid>
     </Border>
 </Window>
